--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.1",
         "melihovv/laravel-shopping-cart": "^7.0",
         "yoeunes/toastr": "^1.2"
     },
