--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.1",
+        "maatwebsite/excel": "^3.1",
         "melihovv/laravel-shopping-cart": "^7.0",
         "yoeunes/toastr": "^1.2"
     },
